Fix IE10/11 bug with the fixed header
Apparently not defining the height property makes everything just plain
messed up, and to fix things, all you need is the height property that has
a value (other than "auto") of some kind.

Bug: T173769

--- a/resources/screen-desktop.less
+++ b/resources/screen-desktop.less
@@ -21,6 +21,12 @@
 /* Header */
 
 #mw-header-container {
+	/* Stupid IE10+ bug requires defining the height property for this to work
+	 * the way it is intended; without doing that this'll break horribly under
+	 * IE10 and IE11.
+	 * @see https://phabricator.wikimedia.org/T173769
+	 */
+	height: 0;
 	position: fixed;
 	z-index: 100;
 	top: 0;
